--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/app_name"
+            android:label="@string/app_bar"
             android:screenOrientation="portrait">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
@@ -30,7 +30,7 @@
         </activity>
         <activity
             android:name=".EntryActivity"
-            android:label="@string/app_name"
+            android:label="@string/app_bar"
             android:screenOrientation="portrait">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
